--- a/frontend/src/app/user/list-users/list-users.component.sass
+++ b/frontend/src/app/user/list-users/list-users.component.sass
@@ -1,6 +1,6 @@
-$primary-color: #c0caed;
-$secondary-color: #333;
-$animation-duration: 1s;
+$primary-color: #c0caed
+$secondary-color: #333
+$animation-duration: 1s
 
 @keyframes fadeIn
   from
