--- a/frontend/src/app/user/list-users/list-users.component.html
+++ b/frontend/src/app/user/list-users/list-users.component.html
@@ -22,10 +22,9 @@
               <td>{{ user.birthday }}</td>
               <td>{{ user.phoneNumber }}</td>
               <td>
-                <label class="switch">
-                  <input type="checkbox" [checked]="user.enabled" (change)="toggleUserStatus(user.id, $event)">
-                  <span class="slider round"></span>
-                </label>
+                <div class="form-check form-switch">
+                    <input class="form-check-input btn-lg" type="checkbox" role="switch" id="flexSwitchCheckDefault" [checked]="user.enabled" (change)="toggleUserStatus(user.id, $event)">
+                  </div>
               </td>
               <td>
                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" (click)="openUserModal(user)" [attr.data-bs-target]="'#userModal'">Details</button>
