--- a/frontend/src/app/user/singup/singup.component.html
+++ b/frontend/src/app/user/singup/singup.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
     <div class="row justify-content-center">
       <div class="col-md-9" [@fieldsetAnimation]="currentStep">
-        <form [formGroup]="msform" id="msform">
+        <form [formGroup]="msform" id="msform" >
           <ul id="progressbar" class="nav nav-pills">
             <li class="nav-item" *ngFor="let fieldset of fieldsets; let i = index">
               <span class="nav-link" [ngClass]="{'active': i === currentStep}">{{ fieldset.title }}</span>
@@ -25,6 +25,10 @@
               </div>
             
               <div class="col-8 p-2">
+                <div *ngIf="msform.get('email')?.invalid && msform.get('email')?.touched" class="alert alert-danger">
+                  <div>Email already exists</div>
+    
+                </div>
                 <input
                   *ngFor="let input of fieldsets[currentStep].inputs"
                   [type]="input.type || 'text'"
@@ -108,6 +112,7 @@
                     type="button"
                     (click)="submitForm()"
                     class="submit action-button btn btn-primary"
+                    [disabled]="msform.get('email')?.invalid && msform.get('email')?.touched"
                   >
                     Submit
                   </button>
