--- a/backend/src/main/resources/templates/confirmationEmail.html
+++ b/backend/src/main/resources/templates/confirmationEmail.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Email</title>
+    <title>Confrim Your Reservation</title>
+</head>
 <body>
-<h1 style="color: blue; font-size: 46px;">Dear [[${msgBody}]],</h1>
-<p style="color: blue; font-size: 46px;">Thank you for registering for our service.</p>
-<p>Your registration has been confirmed.</p>
+<p>This email is sent to confirm the request of being part of our event.</p>
+<p>Please click the link below to confirm. The reservation will not be saved if you do not confirm within 45 minutes.</p>
+<a th:href="@{LINK}"><button type="button">Confirm Reservation</button></a>
 </body>
 </html>
