--- a/frontend/src/app/skill/edit-skill-dialog/edit-skill-dialog.component.sass
+++ b/frontend/src/app/skill/edit-skill-dialog/edit-skill-dialog.component.sass
@@ -2,6 +2,12 @@
 @import '~@angular/material/prebuilt-themes/indigo-pink.css'
 @import 'tippy.js/dist/tippy.css'
 
+    
+.title
+    font-size: 24px
+    color: #3b3b3b
+    top: -10px
+
 .alt-gradient-button
     border: none
     background: linear-gradient(to right, rgb(236, 72, 140), rgb(240, 54, 82))
