--- a/frontend/src/app/skill/skill.component.html
+++ b/frontend/src/app/skill/skill.component.html
@@ -41,7 +41,7 @@
             <i class="material-icons">edit</i>
           </div>
 
-          <div class="skill-control-button is-danger" (click)="onDeleteClicked(skill)">
+          <div class="skill-control-button is-danger" (click)="deleteSkill(skill.id)">
             <i class="material-icons">delete</i>
           </div>
         </div>
