--- a/backend/src/main/resources/templates/SuccesfullySaved.html
+++ b/backend/src/main/resources/templates/SuccesfullySaved.html
@@ -5,6 +5,6 @@
     <title>Reserved</title>
 </head>
 <body>
-<h1>Your reservation was saved successfully!</h1>
+<h1>Your reservation at <span th:text="${Eventi}">Default</span> was saved successfully!</h1>
 </body>
 </html>
