--- a/frontend/src/app/employment/employment.component.html
+++ b/frontend/src/app/employment/employment.component.html
@@ -3,11 +3,8 @@
   <div class="row">
     <div class="col">
       <div class="card">
-        <div class="card-header bg-primary text-white">
-          <h5 class="card-title mb-0">Employment</h5>
-        </div>
         <div class="card-body">
-          <form (ngSubmit)="addEmployment()" #employmentForm="ngForm">
+          <form (ngSubmit)="addEmployment()" #employmentForm="ngForm" (keydown.enter)="$event.preventDefault()">
             <div class="row align-items-center p-1">
               <div class="col">
                 <div class="row">
@@ -72,7 +69,7 @@
                       <div class="col-md-2 form-check form-switch d-flex flex-column align-items-center align-md-items-start">
                         <label class="form-check-label labelOngoing mb-2 " for="flexSwitchCheckDefault">Ongoing</label>
                         <div class="form-check">
-                          <input class="form-check-input btn-lg" type="checkbox" role="switch" id="flexSwitchCheckDefault" [checked]="newEmployment.ongoing" />
+                          <input class="form-check-input btn-lg" type="checkbox" role="switch" id="flexSwitchCheckDefault" [checked]="newEmployment.ongoing" (change)="onOngoingChange($event)" />
                         </div>
                       </div>
                       
@@ -106,9 +103,12 @@
                     </div>
                   </div>
                 </div>
+                <div>
+                <app-skill-search  (selectedSkillsChange)="onSelectedSkillsChange($event)"></app-skill-search> 
+                </div>
               </div>
             </div>
-            <button type="submit" class="btn btn-success mt-3">Add Employment</button>
+            <button type="submit" class="btn btn-success mt-3">Add Work Experience</button>
           </form>
         </div>
       </div>
@@ -122,13 +122,23 @@
     <div class="col">
       <div class="card">
         <div class="card-header bg-primary text-white">
-          <h5 class="card-title mb-0">Employment List</h5>
+          <h5 class="card-title mb-0">Work Experience</h5>
         </div>
         <div class="card-body">
           <div *ngFor="let employment of employments; let i = index" class="mb-3">
             <div class="card">
               <div class="card-body" style="background-color: rgb(246, 249, 255);">
-                <h5 class="card-title mb-3">{{ employment.companyName }}</h5>
+                <div class="row">
+                  <div class="col-md-6">
+                    <h5 class="card-title mb-3">{{ employment.companyName }}</h5>
+                  </div>
+                  <div class="col-md-4">
+                    <p class="card-text mb-2 left"><strong> {{getCountryName(employment)}}</strong> {{ employment.city }}</p>
+
+                  </div>
+
+                </div>
+        
                 <p class="card-text mb-2">
                   <strong>Position:</strong> {{ employment.occupationPosition }}
                 </p>
@@ -143,12 +153,28 @@
                 <hr />
                 <div class="row">
                   <div class="col-md-6">
-                    <p class="card-text mb-2"><strong>City:</strong> {{ employment.city }}</p>
-                    <ng-container *ngIf="employment.fromDate && employment.toDate; else noDatesSelected">
+                    <ng-container *ngIf="(employment.fromDate && employment.toDate) || (employment.fromDate && employment.ongoing); else noDatesSelected">
                       <p class="card-text">From: {{ employment.fromDate }}</p>
-                      <p class="card-text">To: {{ employment.toDate }}</p>
+                      <!-- <p class="card-text">To: {{ employment.toDate }}</p> -->
+                   
+                      <ng-container *ngIf="!employment.ongoing; else ongoingSection">
+                        <p class="card-text">To: {{ employment.toDate }}</p>
+                      </ng-container>
+                      <ng-template #ongoingSection>
+                        <p class="card-text">Ongoing</p>
+                      </ng-template>
+            
+                      
                     </ng-container>
                   </div>
+
+                  <div class="col-md-6">
+                    <p class="card-text">Skills:</p>
+                    <div>
+                      <span *ngFor="let skill of employment.skills" class="badge bg-primary me-2">{{ getSkillName(skill) }}</span>
+                    </div>
+                  </div>
+                  
                 </div>
                 <hr />
                 <div class="d-flex justify-content-end">
@@ -157,6 +183,9 @@
                 </div>
               </div>
             </div>
+
+      
+
             <ng-template #noDatesSelected>
               <p class="card-text">No dates selected.</p>
             </ng-template>
