--- a/frontend/src/app/skill-search/skill-search.component.html
+++ b/frontend/src/app/skill-search/skill-search.component.html
@@ -19,7 +19,7 @@
         <div class="col">
             <span *ngIf="filteredSkills.length != 0">Available skills</span>
           <div *ngFor="let skill of filteredSkills">
-            <span class="badge bg-secondary me-2" (click)="onAddSkill(skill)">{{ skill }}</span>
+            <span class="badge bg-secondary me-2" (click)="onAddSkill(skill)">{{ getSkillName(skill)}}</span>
           </div>
         </div>
       </div>
@@ -28,7 +28,7 @@
       <div class="col">
         <span *ngIf="selectedSkills.length != 0">Selected skills</span>
         <div *ngFor="let skill of selectedSkills">
-          <span class="badge bg-primary me-2">{{ skill }}</span>
+          <span class="badge bg-primary me-2">{{ getSkillName(skill) }}</span>
         </div>
       </div>
     </div>
