--- a/frontend/src/app/education/education.component.html
+++ b/frontend/src/app/education/education.component.html
@@ -2,9 +2,6 @@
     <div class="row">
       <div class="col">
         <div class="card">
-          <!-- <div class="card-header">
-            <h5 class="card-title text-white">Education</h5>
-          </div> -->
           <div class="card-body">
             <!-- <div *ngFor="let education of educations" class="mb-4"> -->
               <form (ngSubmit)="addEducation()" #educationForm="ngForm">
@@ -59,7 +56,7 @@
                     </div>
                 </div>
               </div>
-            <button type="submit" class="btn btn-success">Add Education</button>
+            <button type="submit" class="btn btn-success my-3">Add Education</button>
 
             </form>
             <!-- </div> -->
@@ -69,14 +66,12 @@
     </div>
   </div>
 
-  <div> education list works</div>
-
   <div class="container mt-4">
     <div class="row">
       <div class="col">
         <div class="card">
           <div class="card-header bg-primary text-white">
-            <h5 class="card-title mb-0">Education List</h5>
+            <h5 class="card-title mb-0">Education Records</h5>
           </div>
           <div class="card-body">
             <div *ngFor="let education of educations; let i = index" class="mb-3">
