--- a/frontend/src/app/user/singup/singup.component.html
+++ b/frontend/src/app/user/singup/singup.component.html
@@ -27,15 +27,16 @@
               <div class="col-8 p-2">
                 <div *ngIf="msform.get('email')?.invalid && msform.get('email')?.touched" class="alert alert-danger">
                   <div>Email already exists</div>
-    
+                </div>
+                <div *ngIf="msform.hasError('passwordsNotMatch') && msform.get('confirm_pass')?.touched" class="alert alert-danger">
+                  Passwords do not match.
                 </div>
                 <input
                   *ngFor="let input of fieldsets[currentStep].inputs"
-                  [type]="input.type || 'text'"
+                  [type]="input.type === 'password' ? 'password' : (input.type === 'date' ? 'date' : 'text')"
                   formControlName="{{ input.name }}"
                   placeholder="{{ input.placeholder }}"
                   class="form-control"
-                  [attr.type]="input.type === 'date' ? 'date' : 'text'"
                 />
                 <textarea
                   class="form-control"
@@ -55,9 +56,6 @@
                 [attr.type]="input.type === 'date' ? 'date' : 'text'"
               />
             </div>
-            
-
-
             <div *ngIf="currentStep === 0" class="row mt-3">
               <app-country-city-selector
                 [countries]="countries"
@@ -119,7 +117,7 @@
                     type="button"
                     (click)="submitForm()"
                     class="submit action-button btn btn-primary"
-                    [disabled]="msform.get('email')?.invalid && msform.get('email')?.touched"
+                    [disabled]="msform.get('email')?.invalid && msform.get('email')?.touched || msform.hasError('passwordsNotMatch')"
                   >
                     Submit
                   </button>
