--- a/frontend/src/app/user/singup/singup.component.sass
+++ b/frontend/src/app/user/singup/singup.component.sass
@@ -79,6 +79,9 @@ body
     &:hover, &:focus
       box-shadow: 0 0 0 2px white, 0 0 0 3px #ee0979
 
+  .submit 
+    width: 200px
+
   .action-button-previous
     width: 100px
     background: #C5C5F1
@@ -211,4 +214,5 @@ body
   height: 100%
   object-fit: contain
   border-radius: 50%
+
 
