--- a/frontend/src/app/user/singup/singup.component.html
+++ b/frontend/src/app/user/singup/singup.component.html
@@ -1,4 +1,12 @@
 <div class="container mt-5">
+  <div *ngIf="messageService.getErrorMessage()" class="alert alert-danger">
+    {{ messageService.getErrorMessage() }}
+  </div>
+
+  <div *ngIf="messageService.getSuccessMessage()" class="alert alert-success">
+    {{ messageService.getSuccessMessage() }}
+  </div>
+  
     <div class="row justify-content-center">
       <div class="col-md-9" [@fieldsetAnimation]="currentStep">
         <form [formGroup]="msform" id="msform" >
@@ -99,6 +107,7 @@
                     type="button"
                     (click)="previousStep()"
                     class="previous action-button-previous btn btn-secondary"
+                    disabled=true
                   >
                     Previous
                   </button>
@@ -119,7 +128,7 @@
                     class="submit action-button btn btn-primary"
                     [disabled]="msform.get('email')?.invalid && msform.get('email')?.touched || msform.hasError('passwordsNotMatch')"
                   >
-                    Submit
+                    Create Account
                   </button>
                 </div>
               </div>
