--- a/frontend/src/app/user/list-users/list-users.component.html
+++ b/frontend/src/app/user/list-users/list-users.component.html
@@ -1,4 +1,3 @@
-<p>list-users works!</p>
 
 <div class="container">
     <table datatable [dtOptions]="dtOptions" class="row-border hover">
@@ -11,11 +10,15 @@
               <th>Birthday</th>
               <th>Phone Number</th>
               <th>Enabled</th>
+              <th></th>
+              <th></th>
             </tr>
           </thead>
           <tbody>
             <tr *ngFor="let user of users">
-              <td>{{ user.profilePicUrl }}</td>
+              <!-- <td><img class="img-fluid rounded-circle" src="../Hana-Marku-53157/lana-del-rey.jpg" alt="Profile Picture"></td> -->
+              <td> <img [src]="user.profilePicUrl" alt="Profile Picture"></td>
+              <!-- <td>{{ user.profilePicUrl }}</td> -->
               <td>{{ user.firstname }}</td>
               <td>{{ user.lastname }}</td>
               <td>{{ user.email }}</td>
