--- a/frontend/src/app/interest/interest.component.sass
+++ b/frontend/src/app/interest/interest.component.sass
@@ -6,7 +6,7 @@
     padding-bottom: 150px
 
     h1.title
-        font-weight: bold  
+        font-weight: bold
         color: white
         text-shadow: 0px 1px 2px rgba(black, 0.12)
 
@@ -31,18 +31,18 @@
         opacity: 1
         color: white
         box-shadow: 0px 0px 0px 4px rgba(black, 0.05)
-    
-    &:active 
+
+    &:active
         opacity: 0.8
-    
-    &:focus 
+
+    &:focus
         color: white
         opacity: 1
-    
+
     i.material-icons
         margin-right: 5px
         margin-left: -3px
-    
+
 .interest-item
     display: flex
     align-items: center
@@ -69,7 +69,7 @@
     opacity: 1
     visibility: visible
     transform: translateY(0)
-    
+
 .interest-controls-box .interest-control-button
     display: flex
     background: #f5f7f8
@@ -92,13 +92,50 @@
 
     &:last-of-type
         border-top-right-radius: 7px
-        
+
 .interest-controls-box .interest-control-button.is-danger:hover i.material-icons
-    color: rgb(155, 27, 27) 
+    color: rgb(155, 27, 27)
 
 .interest-controls-box .interest-control-button.is-danger:active i.material-icons
-    color: rgb(189, 37, 37) 
+    color: rgb(189, 37, 37)
+
+.sort-box
+    width: 100%
+    text-align: right
+    
+.dropdown
+    i.material-icons
+        font-size: 20px
+        color: #555
+        margin-right: 7px
+        margin-left: 10px
+
+.dropdown-menu
+    width: 200px
+    right: 0
+    left: auto
+    border-radius: 6px
+    border: none
+    padding-top: 0
+    margin-top: 7px
+    opacity: 0
+    visibility: hidden
+    transition: opacity 0.2s, visibility 0.1s
+
+.dropdown-menu.active
+  opacity: 1
+  visibility: visible
+
+
+.dropdown-content .dropdown-item
+    display: flex
+    align-items: center
+    cursor: pointer
+
+.sort-by-button:hover
+        opacity: 1
+        box-shadow: 0px 0px 0px 3px rgba(black, 0.05)
+    
 
 
     
-
