--- a/frontend/src/app/skill/skill.component.sass
+++ b/frontend/src/app/skill/skill.component.sass
@@ -98,3 +98,44 @@
 
 .skill-controls-box .skill-control-button.is-danger:active i.material-icons
     color: rgb(189, 37, 37)
+
+.sort-box
+    width: 100%
+    text-align: right
+    
+.dropdown
+    i.material-icons
+        font-size: 20px
+        color: #555
+        margin-right: 7px
+        margin-left: 10px
+
+.dropdown-menu
+    width: 200px
+    right: 0
+    left: auto
+    border-radius: 6px
+    border: none
+    padding-top: 0
+    margin-top: 7px
+    opacity: 0
+    visibility: hidden
+    transition: opacity 0.2s, visibility 0.1s
+
+.dropdown-menu.active
+  opacity: 1
+  visibility: visible
+
+
+.dropdown-content .dropdown-item
+    display: flex
+    align-items: center
+    cursor: pointer
+
+.sort-by-button:hover
+        opacity: 1
+        box-shadow: 0px 0px 0px 3px rgba(black, 0.05)
+    
+
+
+    
