--- a/frontend/src/styles.sass
+++ b/frontend/src/styles.sass
@@ -1,2 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.min.css'
+//import font awesome
+@import '~font-awesome/css/font-awesome.min.css'
+
+//import angular notifications style
+@import "node_modules/angular-notifier/styles"
