--- a/frontend/src/app/user/signin/signin.component.html
+++ b/frontend/src/app/user/signin/signin.component.html
@@ -68,11 +68,11 @@
                     <input type="checkbox" name="checkbox"> Stay signed in for a week
                   </label>
                 </div>
-                <div class="d-flex justify-content-center login_container field padding-bottom--24">
-                  <button type="submit" [disabled]="loginForm.invalid || showLoading" name="button" class="btn login_btn center-text white-text py-2">
+                <div style="color: white;" class="d-flex justify-content-center login_container field padding-bottom--24">
+                  <button  type="submit" [disabled]="loginForm.invalid || showLoading" name="button" class="btn login_btn center-text white-text py-2">
                     <i *ngIf="showLoading" class="fas fa-spinner fa-spin"></i>&nbsp;&nbsp;
-                    <span *ngIf="showLoading">Loading...</span>
-                    <span *ngIf="!showLoading">Continue</span>
+                    <span style="color: white;" *ngIf="showLoading">Loading...</span>
+                    <span style="color: white;" *ngIf="!showLoading">Continue</span>
                   </button>
                 </div>
                 
