--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,7 @@
+<app-header></app-header>
+<div class="container mt-4">
+    <notifier-container></notifier-container>
 
-<notifier-container></notifier-container>
-
-<router-outlet></router-outlet>
+    <router-outlet></router-outlet>
+    
+</div>
