--- a/frontend/src/app/user/singup/singup.component.sass
+++ b/frontend/src/app/user/singup/singup.component.sass
@@ -1,7 +1,5 @@
-/*custom font
-@import url(https://fonts.googleapis.com/css?family=Montserrat)
 
-/*basic reset
+@import url(https://fonts.googleapis.com/css?family=Montserrat)
 
 *
   margin: 0
@@ -10,17 +8,12 @@
 html
   height: 100%
   background: #6441A5
-
-  /* fallback for old browsers
   background: -webkit-linear-gradient(to left, #6441A5, #2a0845)
 
-  /* Chrome 10-25, Safari 5.1-6
 
 body
   font-family: montserrat, arial, verdana
   background: transparent
-
-/*form styles
 
 #msform
   text-align: center
@@ -37,7 +30,6 @@ body
     width: 80%
     margin: 0 10%
 
-    /*stacking fieldsets above each other
     position: relative
 
     &:not(:first-of-type)
@@ -83,7 +75,8 @@ body
     width: 200px
 
   .action-button-previous
-    width: 100px
+    margin-left: 5px
+    width: 300px
     background: #C5C5F1
     font-weight: bold
     color: white
