--- a/frontend/src/app/user/signin/signin.component.html
+++ b/frontend/src/app/user/signin/signin.component.html
@@ -93,7 +93,7 @@
             </div>
           </div>
           <div class="footer-link padding-top--24">
-            <span>Don't have an account? <a href="">Sign up</a></span>
+            <span>Don't have an account? <a routerLink="/signup">Sign up</a></span>
             <div class="listing padding-top--24 padding-bottom--24 flex-flex center-center">
               <span><a href="#">© Stackfindover</a></span>
               <span><a href="#">Contact</a></span>
