--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -49,17 +49,18 @@
               </a>
               <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                 <li>
-                  <a class="dropdown-item" href="#">
+                  <a routerLink="/profile" class="dropdown-item" href="#">
                     <i class="fas fa-user"></i> My Profile
                   </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#">
+                  <a class="dropdown-item" routerLink="/signin" (click)="signOut()">
                     <i class="fas fa-sign-out-alt"></i> Signout
                   </a>
                 </li>
               </ul>
             </li>
+            
             <li class="nav-item" *ngIf="!loggedIn" routerLink="/signin">
                 <a class="nav-link" href="#">
                 <i class="fas fa-sign-in-alt"></i> Sign In
