--- a/frontend/src/styles.sass
+++ b/frontend/src/styles.sass
@@ -4,3 +4,7 @@
 @import '~font-awesome/css/font-awesome.min.css'
 
 @import "node_modules/angular-notifier/styles"
+
+@import '~quill/dist/quill.core.css'
+@import '~quill/dist/quill.snow.css'
+@import '~quill/dist/quill.bubble.css'
