--- a/frontend/src/app/setting-folder/forgot-email-template/forgot-email-template.component.html
+++ b/frontend/src/app/setting-folder/forgot-email-template/forgot-email-template.component.html
@@ -3,14 +3,14 @@
       <div class="form-group row py-2">
         <label class="col-sm-2 col-form-label">E-mail Subject:</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" formControlName="CUSTOMER_VERIFY_SUBJECT" required>
+          <input type="text" class="form-control" formControlName="FORGOT_PASSWORD_SUBJECT" required>
         </div>
       </div>
   
       <div class="form-group row">
         <label class="col-sm-2 col-form-label">E-mail Content:</label>
         <div class="col-sm-10">
-          <angular-editor formControlName="CUSTOMER_VERIFY_CONTENT" [placeholder]="'Enter text here...'" [config]="config" ></angular-editor>
+          <angular-editor formControlName="FORGOT_PASSWORD_CONTENT" [placeholder]="'Enter text here...'" [config]="config" ></angular-editor>
         </div>
       </div>
       <div class="text-center">
