--- a/frontend/src/app/user/signin/signin.component.html
+++ b/frontend/src/app/user/signin/signin.component.html
@@ -53,7 +53,7 @@
                   <div class="grid--50-50">
                     <label for="password">Password</label>
                     <div class="reset-pass">
-                      <a href="#">Forgot your password?</a>
+                      <a routerLink="/forgot-password">Forgot your password?</a>
                     </div>
                   </div>
                   <input type="password" name="password" ngModel
@@ -94,11 +94,6 @@
           </div>
           <div class="footer-link padding-top--24">
             <span>Don't have an account? <a routerLink="/signup">Sign up</a></span>
-            <div class="listing padding-top--24 padding-bottom--24 flex-flex center-center">
-              <span><a href="#">© Stackfindover</a></span>
-              <span><a href="#">Contact</a></span>
-              <span><a href="#">Privacy & terms</a></span>
-            </div>
           </div>
         </div>
       </div>
