event Cruds functional on front

--- a/frontend/src/app/event-features/event-detail/event-detail.component.html
+++ b/frontend/src/app/event-features/event-detail/event-detail.component.html
@@ -1,9 +1,14 @@
 <div *ngIf="event">
   <h2>{{event.name | uppercase}} Details</h2>
-  <div>topic: {{event.topic}}</div>
-  <div>
-    <label for="name">Event name: </label>
-    <input id="name" [(ngModel)]="event.name" placeholder="name">
+  <div >
+    <p>Name: {{event.name}}</p>
+    <p>Topic: {{event.topic}}</p>
+    <p>Description: {{event.description}}</p>
+    <p>Img url: {{event.imgUrl}}</p>
+    <p>Members: {{event.maxParticipants}}</p>
   </div>
-  <button type="button" (click)="save()">save</button>
-</div>
+
+  <button type="submit" (click)="onUpdateded()">update</button>
+  <app-event-edit [hidden]="updated" [event]="selectedEvent" ></app-event-edit>
+  <button type="submit" (click)="onDeleted()">delete</button>
+  <app-event-delete [hidden]="deleted" [event]="selectedEvent" ></app-event-delete>
