--- a/frontend/src/app/event-features/event-form/event-form.component.html
+++ b/frontend/src/app/event-features/event-form/event-form.component.html
@@ -46,5 +46,5 @@
           <span>The maximum of participants field is required</span>
       </div>
       </div>
-      <button type="submit" class="btn btn-default" [disabled]="!eventForm.form.valid" (click)="newEvent()">New Hero</button>
+      <button type="submit" class="btn btn-default" [disabled]="!eventForm.form.valid" (click)="newEvent()">New Event</button>
 
