event req all functional, next are event specifics and adding styling

--- a/frontend/src/app/event-features/event-form/event-form.component.html
+++ b/frontend/src/app/event-features/event-form/event-form.component.html
@@ -37,6 +37,7 @@
           <span>Image Path is required</span>
       </div>
       </div>
+      <app-event-specifics></app-event-specifics>
       <div>
         <label for="maxParticipants">Max Participants:</label>
         <input type="number" class="form-control" id="maxParticipants"
