--- a/frontend/src/app/event/event.component.html
+++ b/frontend/src/app/event/event.component.html
@@ -1,5 +1,5 @@
 <h2>My Events</h2>
-
+<app-event-search-by></app-event-search-by>
 <ul>
   <li *ngFor="let e of event">
     <button [class.selected] = "e === selectedEvent" type="button" (click)="OnSelect(e)">
@@ -8,3 +8,4 @@
   </li>
 </ul>
 <app-event-detail [event]="selectedEvent"></app-event-detail>
+<app-event-form></app-event-form>
