--- a/frontend/src/styles.sass
+++ b/frontend/src/styles.sass
@@ -8,3 +8,5 @@
 @import '~quill/dist/quill.core.css'
 @import '~quill/dist/quill.snow.css'
 @import '~quill/dist/quill.bubble.css'
+@import '~swiper/swiper-bundle.css'
+
