--- a/frontend/src/app/profiles-swiper/profiles-swiper.component.html
+++ b/frontend/src/app/profiles-swiper/profiles-swiper.component.html
@@ -1,4 +1,4 @@
-<div id="carouselExampleControls"  #multipleCardCarousel class="carousel slide" data-bs-ride="carousel">
+<!-- <div id="carouselExampleControls"  #multipleCardCarousel class="carousel slide" data-bs-ride="carousel">
     <div #carouselInner class="carousel-inner">
       <div class="carousel-item active">
         <div class="card">
@@ -64,4 +64,4 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
-  </div>
+  </div> -->
