--- a/frontend/src/styles.sass
+++ b/frontend/src/styles.sass
@@ -9,4 +9,6 @@
 @import '~quill/dist/quill.snow.css'
 @import '~quill/dist/quill.bubble.css'
 @import '~swiper/swiper-bundle.css'
+@import '~bootstrap-icons/font/bootstrap-icons.css'
+
 
