--- a/frontend/src/app/event-features/event-specifics/event-specifics.component.html
+++ b/frontend/src/app/event-features/event-specifics/event-specifics.component.html
@@ -1,13 +1,19 @@
-<h1>Update the event</h1>
-<button (click)="listCities()">list cities</button>
+{{ eventSpecificsModel | json }}
+<div >
+  </div>
 <div>
-    <form (ngSubmit)="onSubmit()" #citySelect="ngForm" >
-        <div>
-            <label for="cars">Choose a car:</label>
-
-            <select name="cars" id="cars">
-                <option value="volvo">Volvo</option>
-            </select>
-        </div>
-    </form>
+  <form (ngSubmit)="onSubmit()" #eventForm="ngForm">
+    <div>
+      <label for="date">Choose a date:</label>
+      <input type="date" id="date" name="date" [(ngModel)]="eventSpecificsModel.date" #dateInput="ngModel">
+    </div>
+    <div>
+      <label for="cities">Choose a city:</label>
+      <select id="cities" name="selectedCityId" [(ngModel)]="selectedCityId">
+        <option *ngFor="let c of cities" [value]="c.id">{{ c.name }}</option>
+      </select>
+    </div>
+    <button type="submit" (click)="addSpecifics()">Submit</button>
+  </form>
+  
 </div>
