--- a/frontend/src/app/event/event.component.html
+++ b/frontend/src/app/event/event.component.html
@@ -1,11 +1,11 @@
-<h2>My Events</h2>
+<h2 class="bigger-badge">My Events</h2>
 <app-event-search-by></app-event-search-by>
-<ul>
+<ul class="container">
   <li *ngFor="let e of event">
-    <button [class.selected] = "e === selectedEvent" type="button" (click)="OnSelect(e)">
+    <button [class.selected]="e === selectedEvent" type="button" class="card" (click)="OnSelect(e)">
       <p>{{ e.name }}</p>
     </button>
   </li>
 </ul>
-<app-event-detail [event]="selectedEvent"></app-event-detail>
-<app-event-form></app-event-form>
+<app-event-detail [event]="selectedEvent" class="card"></app-event-detail>
+<app-event-form class="card"></app-event-form>
