--- a/frontend/src/styles.sass
+++ b/frontend/src/styles.sass
@@ -10,3 +10,6 @@
 @import '~quill/dist/quill.bubble.css'
 @import '~swiper/swiper-bundle.css'
 
+
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap'
